--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
 .customShadow {
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+
+/*scrollbar hidden*/
+.scrollbar-none::-webkit-scrollbar {
+	display: none;
+}
